add problems